# repom

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .tmp_test_model_usage_analysis.md  AGENTS.md  CLAUDE.md  ISSUEKIT.md  README.md  alembic.ini  fix_imports.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: dependency-audit.yml  test.yml
alembic/: env.py
alembic/versions/: .gitkeep  43ba12efc6ba_comment.py  8696d689fea4_comment.py  dbdcc59b0b68_comment.py
data_master/: 001_sample.py
docs/: README.md  alembic-guide.md  auto_import_models_guide.md  base_model_auto_guide.md  get_response_schema_testing_guide.md  tests.md
docs/guides/: README.md  async_repository_guide.md  async_session_guide.md  auto_import_models_guide.md  base_model_auto_guide.md  logging_guide.md  master_data_sync_guide.md  repository_and_utilities_guide.md  repository_session_patterns.md  session_management_guide.md  soft_delete_guide.md  system_columns_and_custom_types.md  testing_guide.md
docs/guides/core/: README.md  auto_import_models_guide.md  base_model_auto_guide.md  system_columns_and_custom_types.md
docs/guides/database/: README.md  migration_to_database_py.md
docs/guides/features/: README.md  alembic_migration_guide.md  auto_import_models_guide.md  config_hook_guide.md  discovery_guide.md  docker_compose_guide.md  docker_manager_guide.md  logging_guide.md  master_data_sync_guide.md  (+3 more)
docs/ideas/: README.md  alembic_version_location_configuration.md  api_type_resolution.md  auto_filter_params_generation.md  flexible_auto_import_models.md  schema_file_generation.md  schema_validation_command.md
docs/isssue/: mine_db_composite_primary_key_issue.md
docs/issue/: README.md  get_response_schema_forward_refs_improvement.md  sqlalchemy_column_inheritance_constraint.md
docs/issues/: README.md
docs/note/: sqlalchemy_custom_type.md
docs/proposals/: 001_fast_domain_adopt_basekit_discovery_utilities.md  001_fast_domain_mine_py_adopt_repom_config_hook.md  002_fast_domain_call_repom_redis_env_helper.md  003_fast_domain_apply_runtime_env_overrides.md  004_mine_py_apply_runtime_env_overrides.md  005_fast_domain_adopt_infra_credential_rotation.md  006_mine_py_adopt_infra_credential_rotation.md  README.md  _template.md
docs/research/: README.md  auto_forward_refs_resolution.md
docs/technical/: README.md  ai_context_management.md  alembic_version_locations_limitation.md  auto_forward_refs_resolution.md  docker_manager_code_reduction_analysis.md  docker_manager_phase1_implementation_guide.md  get_response_schema_technical.md  hybrid_package_logging_strategy.md
repom/: __init__.py  async_base_repository.py  async_session.py  base_model.py  base_model_auto.py  base_repository.py  base_static.py  config.py  config_hook.py  database.py  db.py  docker_service.py  logging.py  session.py  testing.py  utility.py
repom/_/: config_hook.py  discovery.py  docker_compose.py  docker_manager.py
repom/alembic/: __init__.py  reset.py  setup.py  templates.py
repom/config_hooks/: __init__.py  _parsing.py  database.py  pgadmin.py  postgres.py  redis.py  sqlite.py
repom/custom_types/: AutoDateTime.py  CreatedAt.py  CustomJSON.py  ISO8601DateTime.py  ISO8601DateTimeStr.py  JSONEncoded.py  ListJSON.py  StrEncodedArray.py
repom/diagnostics/: __init__.py  database_info.py  query_analyzer.py
repom/examples/: __init__.py
repom/mixins/: __init__.py  many_to_many.py  soft_delete.py
repom/models/: __init__.py  base_model.py  base_model_auto.py  base_static.py  sample.py  user_session.py
repom/postgres/: __init__.py  config.py  credentials.py  docker-compose.template.yml  manage.py
repom/redis/: __init__.py  config.py  credentials.py  docker-compose.template.yml  manage.py
repom/repositories/: __init__.py  _core.py  _introspection.py  _order_by.py  _query_builder.py  _repository_base.py  _soft_delete.py  async_base_repository.py  base_repository.py  sample.py
repom/scripts/: _backup_utils.py  alembic_init.py  alembic_reset.py  check_sample_queries.py  db_backup.py  db_create.py  db_create_master.py  db_delete.py  db_restore.py  db_sync_master.py  debug_repository_queries.py  list_models.py  pg_dump_tools.py  query_analyzer.py  repom_info.py
repom/sqlite/: __init__.py  config.py
scripts/: update_basekit_rev.ps1
tests/: _init.py  conftest.py  db_test_fixtures.py  utils.py
tests/behavior_tests/: test_00_migration_no_id.py  test_alembic_env_loads_models.py  test_circular_import.py  test_circular_import_solutions.py  test_date_type_comparison.py  test_migration_no_id.py  test_type_checking_detailed.py  test_type_checking_import_order.py  test_unique_key_handling.py
tests/fixtures/: __init__.py
tests/integration_tests/: conftest.py  research_version_locations.py  test_dynamic_version_path.py  test_postgres_integration.py  test_set_main_option_effect.py
tests/unit_tests/: test_alembic_config.py  test_alembic_setup.py  test_annotation_inheritance.py  test_async_database.py  test_async_fixtures.py  test_async_repository.py  test_async_repository_default_order_by.py  test_async_repository_options.py  test_async_session.py  test_auto_import_models.py  test_backup_utils.py  test_base_model_auto.py  test_base_model_auto_response.py  test_base_model_auto_schema_cache.py  test_base_model_auto_server_default.py  test_base_model_uuid.py  test_config.py  test_config_feature_modules.py  test_config_hook.py  test_config_hooks_database.py  test_config_hooks_pgadmin.py  test_config_hooks_postgres.py  test_config_hooks_redis.py  test_config_hooks_sqlite.py  test_config_pool_settings.py  test_config_postgres.py  test_config_redis.py  test_create_test_fixtures_multithread.py  test_custom_types.py  test_database.py  test_database_info.py  test_db_sync_master.py  test_discovery_helpers.py  test_docker_compose.py  test_enum_literal_conversion.py  test_external_session_commit.py  test_find_by_ids.py  test_fixtures_models.py  test_flush_refresh_pattern.py  test_json_null_storage.py  (+35 more)
(+263 files in other folders)
