[tool.poetry]
name = "repom"
version = "0.1.0"
description = "Repository pattern + ORM utilities for FastAPI with automatic schema generation"
authors = ["jj <soft.management943@gmail.com>"]
readme = "README.md"
packages = [{ include = "repom" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
inflect = "^7.5.0"
pydantic = "^2.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-sqlalchemy = "^0.2.1"
pytest-benchmark = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
db_create = "repom.scripts.db_create:main"
db_remove = "repom.scripts.db_delete:main"
db_backup = "repom.scripts.db_backup:main"
db_sync_master = "repom.scripts.db_sync_master:main"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-x",
  "--capture=tee-sys",
  "--benchmark-skip",
  "--ignore=tests/test_local.py",
]

markers = [
  "run_benchmark: Run the benchmark",
  "model: mark a test as related to model functionality",
  "repo: mark a test as related to repo functionality",
  "query: mark a test as related to query functionality",
  "yt: mark a test as related to yt functionality",
  "ani_wiki: mark a test as related to ani_wiki functionality",
]

filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore:The default date adapter is deprecated.*:DeprecationWarning",
  "ignore:The default datetime adapter is deprecated.*:DeprecationWarning",
]
