[tool.poetry]
name = "repom"
version = "0.1.0"
description = "Repository pattern + ORM utilities for FastAPI with automatic schema generation"
authors = ["jj <soft.management943@gmail.com>"]
readme = "README.md"
packages = [{ include = "repom" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
inflect = "^7.5.0"
pydantic = "^2.11.3"

# PostgreSQL support (optional)
psycopg = { version = "^3.1", extras = ["binary"], optional = true }

# Async support (optional)
aiosqlite = { version = "^0.20.0", optional = true }
asyncpg = { version = "^0.30.0", optional = true }

[tool.poetry.extras]
postgres = ["psycopg"]
postgres-async = ["asyncpg"]
async = ["aiosqlite"]
async-all = ["aiosqlite", "asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-sqlalchemy = "^0.2.1"
pytest-benchmark = "^5.1.0"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
fastapi = "^0.127.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
db_create = "repom.scripts.db_create:main"
db_remove = "repom.scripts.db_delete:main"
db_backup = "repom.scripts.db_backup:main"
db_sync_master = "repom.scripts.db_sync_master:main"
list_models = "repom.scripts.list_models:list_models"
alembic_init = "repom.scripts.alembic_init:main"
alembic_reset = "repom.scripts.alembic_reset:main"
repom_info = "repom.scripts.repom_info:main"
postgres_generate = "repom.scripts.postgresql.manage:generate"
postgres_start = "repom.scripts.postgresql.manage:start"
postgres_stop = "repom.scripts.postgresql.manage:stop"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-x",
  "--capture=tee-sys",
  "--benchmark-skip",
  "--ignore=tests/test_local.py",
]

markers = [
  "run_benchmark: Run the benchmark",
  "model: mark a test as related to model functionality",
  "repo: mark a test as related to repo functionality",
  "query: mark a test as related to query functionality",
  "yt: mark a test as related to yt functionality",
  "ani_wiki: mark a test as related to ani_wiki functionality",
]

filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore:The default date adapter is deprecated.*:DeprecationWarning",
  "ignore:The default datetime adapter is deprecated.*:DeprecationWarning",
  "ignore:The garbage collector is trying to clean up non-checked-in connection.*:sqlalchemy.exc.SAWarning",
  "ignore:Task was destroyed but it is pending.*:RuntimeWarning",
]
