[project]
name = "repom"
version = "0.1.0"
description = "Repository pattern + ORM utilities for FastAPI with automatic schema generation"
authors = [{ name = "jj", email = "soft.management943@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "basekit",
  "sqlalchemy>=2.0.49,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "inflect>=7.5.0,<8.0.0",
  "pydantic>=2.13.4,<3.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3.4,<4.0.0"]
postgres-async = ["asyncpg>=0.31.0,<0.32.0"]
redis = ["redis>=7.4.0,<8.0.0"]
async = ["aiosqlite>=0.22.1,<0.23.0"]
async-all = [
  "aiosqlite>=0.22.1,<0.23.0",
  "asyncpg>=0.31.0,<0.32.0",
]

[project.scripts]
db_create = "repom.scripts.db_create:main"
db_delete = "repom.scripts.db_delete:main"
db_remove = "repom.scripts.db_delete:main"
db_backup = "repom.scripts.db_backup:main"
db_restore = "repom.scripts.db_restore:main"
db_sync_master = "repom.scripts.db_sync_master:main"
list_models = "repom.scripts.list_models:list_models"
alembic_init = "repom.scripts.alembic_init:main"
alembic_reset = "repom.scripts.alembic_reset:main"
repom_info = "repom.scripts.repom_info:main"
postgres_generate = "repom.postgres.manage:generate"
postgres_start = "repom.postgres.manage:start"
postgres_stop = "repom.postgres.manage:stop"
postgres_remove = "repom.postgres.manage:remove"
redis_generate = "repom.redis.manage:generate"
redis_start = "repom.redis.manage:start"
redis_stop = "repom.redis.manage:stop"
redis_remove = "repom.redis.manage:remove"

[dependency-groups]
dev = [
  "pytest>=8.4.2,<10.0.0",
  "pytest-sqlalchemy>=0.3.0,<0.4.0",
  "pytest-benchmark>=5.1.0,<6.0.0",
  "pytest-asyncio>=0.24.0,<2.0.0",
  "aiosqlite>=0.22.1,<0.23.0",
  "fastapi>=0.136.1,<0.137.0",
  "httpx>=0.28.1,<0.29.0",
  "requests>=2.33.1,<3.0.0",
  "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repom"]

[tool.uv.sources]
basekit = { git = "https://github.com/jjjun/basekit.git", branch = "main" }
[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-x",
  "--capture=tee-sys",
  "--benchmark-skip",
  "--ignore=tests/test_local.py",
]

markers = [
  "run_benchmark: Run the benchmark",
  "model: mark a test as related to model functionality",
  "repo: mark a test as related to repo functionality",
  "query: mark a test as related to query functionality",
  "yt: mark a test as related to yt functionality",
  "ani_wiki: mark a test as related to ani_wiki functionality",
]

filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore:The default date adapter is deprecated.*:DeprecationWarning",
  "ignore:The default datetime adapter is deprecated.*:DeprecationWarning",
  "ignore:The garbage collector is trying to clean up non-checked-in connection.*:sqlalchemy.exc.SAWarning",
  "ignore:Task was destroyed but it is pending.*:RuntimeWarning",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F403", "F405"]


[tool.issuekit]
recent_count = 30
ascii_id_threshold = 76
issues_dir = "docs/issues"
